--- a/index.html
+++ b/index.html
@@ -74,7 +74,10 @@
       <div class="det" style="color:white">OK</div>
       <div class="mes" style="color:white">ようこそ　藺牟田様！</div>
     </div>
-    
+    <div id="o052960o@gmail.com" num="No.0012">
+      <div class="det" style="color:white">OK</div>
+      <div class="mes" style="color:white">ようこそ　伊藤様！</div>
+    </div>
     
 
   </div>
