--- a/index.html
+++ b/index.html
@@ -78,7 +78,14 @@
       <div class="det" style="color:white">OK</div>
       <div class="mes" style="color:white">ようこそ　伊藤様！</div>
     </div>
-    
+    <div id="gyaaaa0918@gmail.com" num="No.0013">
+      <div class="det" style="color:white">OK</div>
+      <div class="mes" style="color:white">ようこそ　鈴木様！</div>
+    </div>
+    <div id="watago0825@gmail.com" num="No.0014">
+      <div class="det" style="color:white">OK</div>
+      <div class="mes" style="color:white">ようこそ　渡邉様！</div>
+    </div>
 
   </div>
   <footer>
